apps/convertx/deployment-convertx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: convertx
  name: convertx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convertx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: convertx
    spec:
      containers:
        - image: ghcr.io/c4illin/convertx:v0.19.0
          name: convertx
          resources:
            requests:
              memory: 20Mi
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          startupProbe:
            httpGet:
              path: /healthcheck
              port: http
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 30
          volumeMounts:
            - mountPath: /app/data
              name: convertx
      restartPolicy: Always
      volumes:
        - name: convertx
          persistentVolumeClaim:
            claimName: convertx
