apps/convertx/service-convertx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: convertx
  name: convertx
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: convertx
