apps/convertx/ingress-convertx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convertx
spec:
  ingressClassName: cilium
  rules:
    - host: convertx.almothana.xyz
      http:
        paths:
          - backend:
              service:
                name: convertx
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - convertx.almothana.xyz
      secretName: almothana-xyz-tls
